Fixed bug where label jumped when exceeding certain values

--- a/fractal-tree/fractal-tree.css
+++ b/fractal-tree/fractal-tree.css
@@ -47,6 +47,7 @@ button{
 }
 
 label{
+	display: block;
 	margin-left: 30px;
 }
 
